--- a/FrontEnd/sass/main.scss
+++ b/FrontEnd/sass/main.scss
@@ -4,4 +4,8 @@
 @import'../sass/base/utilities';
 @import'../sass/components/interests.scss';
 @import'../sass/components/dashboard.scss';
+@import'../sass/components/interests-modal.scss';
+
+
+
 
