--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -46,6 +46,14 @@ body {
   .interests__link:link, .interests__link:hover {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.8); }
+  .interests__link--modal {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 1.6rem; }
+    .interests__link--modal:hover {
+      background-color: rgba(207, 207, 207, 0.25);
+      color: rgba(0, 0, 0, 0.75);
+      text-decoration: none;
+      padding: 0.5rem; }
   .interests__follower-count {
     font-size: 1.2rem;
     color: rgba(0, 0, 0, 0.5); }
@@ -68,15 +76,11 @@ body {
 
 #interests-modal {
   font-size: 2rem; }
-  #interests-modal__content {
-    background-color: white; }
-  #interests-modal__header:nth-child(1) {
+  #interests-modal__title {
     font-size: 2rem; }
-  #interests-modal__header-container {
-    display: flex;
-    justify-content: flex-start; }
-  #interests-modal__close {
-    font-size: 3rem; }
+  #interests-modal .close {
+    font-size: 3rem;
+    margin-right: .5rem; }
 
 .dashboard {
   display: flex;
@@ -96,3 +100,18 @@ body {
     font-size: 3.2rem; }
   .dashboard__description {
     font-size: 1.6rem; }
+
+.interests-modal__content {
+  padding: 1rem 0rem; }
+
+.interests-modal__title {
+  margin-left: 0.5rem; }
+
+.interests-modal__container {
+  padding: 1.5rem 1rem;
+  min-height: 14rem; }
+  .interests-modal__container::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.2); }
