--- a/FrontEnd/sass/components/_interests.scss
+++ b/FrontEnd/sass/components/_interests.scss
@@ -1,5 +1,4 @@
 .interests {
-
   background-color: white;
   padding: 3rem 3rem 0rem 3rem;
   border: 1px solid rgba($color: #000000, $alpha: 0.2);
@@ -37,6 +36,18 @@
       text-decoration: none;
       color: $primary-text-color;
     }
+    // following link in bootstrap modal 
+    &--modal {
+      color: rgba(0, 0, 0, 0.6);
+      font-size: 1.6rem;
+
+      &:hover {
+        background-color: hsla(0, 0%, 81.2%, 0.25);
+        color: rgba(0, 0, 0, 0.75);
+        text-decoration: none;
+        padding: 0.5rem;
+      }
+    }
   }
 
   &__follower-count {
@@ -45,7 +56,7 @@
   }
 
   &__see-all {
-      text-decoration: none;
+    text-decoration: none;
     min-height: 4rem;
     justify-content: center;
     // horizontal line
@@ -63,30 +74,21 @@
     }
 
     &:hover {
-      background-color: rgba($color: #0073b1, $alpha: .2);
+      background-color: rgba($color: #0073b1, $alpha: 0.2);
       text-decoration: none;
     }
   }
 }
 
-#interests-modal
-{
+// override font-size default properties of bootstrap modal
+#interests-modal {
+  font-size: 2rem;
+
+  &__title {
     font-size: 2rem;
-    &__content
-    {
-        background-color: white;
-    }
-    &__header:nth-child(1)
-    {
-        font-size: 2rem;
-    }
-    &__header-container
-    {
-        display: flex;
-        justify-content: flex-start;
-    }
-    &__close
-    {
-        font-size: 3rem;
-    }
+  }
+  .close {
+    font-size: 3rem;
+    margin-right: .5rem;
+  }
 }
