--- a/FrontEnd/sass/Component/_img-profile.scss
+++ b/FrontEnd/sass/Component/_img-profile.scss
@@ -1,4 +1,8 @@
 .img-profile {
-    bottom: -2rem;
-    margin: 0 2rem;
+    top: 50%;
+    padding: 0 2em;
+    .profile-image {
+        width: 150px;
+        height: 150px;
+    }
 }
