--- a/FrontEnd/sass/Component/_item-intro.scss
+++ b/FrontEnd/sass/Component/_item-intro.scss
@@ -1,6 +1,6 @@
 .item-intro {
     position: relative;
-    width: 100%;
-    padding-bottom: 25%;
-    background-image: url("../assities/Capture.PNG");
+    height: 200px;
+    background-image: url("../assets/Capture.PNG");
+    background-size: cover;
 }
