--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -61,6 +61,9 @@ html {
   border-bottom: 1px solid #cccccc;
   letter-spacing: 0.7px;
   line-height: 1.5; }
+  .skill__description {
+    font-size: 1.4rem;
+    font-weight: 400; }
   .skill:last-child {
     border-bottom: none; }
   .skill__title {
@@ -93,7 +96,7 @@ html {
   .tab__body {
     margin-left: 1rem; }
 
-.media-body {
+.media__body {
   display: flex !important;
   font-size: 1.4rem !important; }
 
@@ -105,8 +108,8 @@ html {
     color: #2D7EAA !important;
     font-weight: 550; }
   .accomplishment__description {
-    font-size: 1rem;
-    font-weight: 450; }
+    font-size: 1.4rem;
+    font-weight: 400; }
   .accomplishment__section {
     display: inline-block !important;
     padding: 1rem; }
@@ -118,25 +121,27 @@ html {
     background-color: #E5F5FC;
     height: auto; }
 
-section {
+.section {
   margin: 4rem 20rem 4rem 12rem;
   width: 60%;
   background-color: #FFFFFF;
   border-radius: 0.2rem;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.2); }
-  section .btn--inline {
+  .section .btn--inline {
     margin-top: 1.5rem; }
-  section .btn--inline, section h2 {
+  .section .btn--inline,
+  .section h2 {
     display: inline-block !important;
     margin-top: 2.5rem; }
-  section h2, section h3 {
+  .section h2,
+  .section h3 {
     line-height: 1.4;
     font-weight: 400;
     color: #1A1A1A;
     padding-left: 1.2rem; }
-  section h2 {
+  .section h2 {
     font-size: 2rem; }
-  section h3 {
+  .section h3 {
     border-bottom: 1px solid #cccccc;
     border-top: 1px solid #cccccc;
     font-size: 1.6rem;
