--- a/FrontEnd/sass/components/_accomplishment.scss
+++ b/FrontEnd/sass/components/_accomplishment.scss
@@ -1,36 +1,28 @@
-.accomplishment{
+.accomplishment {
     padding: 1rem;
     border-bottom: 1px solid $secondary-font-color;
-    &__type
-    {
+    &__type {
         font-size: 1.5rem;
         color: #2D7EAA !important;
         font-weight: 550;
-      
     }
-    &__description{
-        font-size: 1rem;
-        font-weight: 450;
-      
+    &__description {
+        font-size: 1.4rem;
+        font-weight: 400;
     }
-   &__section{
-
+    &__section {
         display: inline-block !important;
         padding: 1rem;
     }
     &__section1 {
-        p{
+        p {
             font-size: 4rem;
             color: #2D7EAA;
             font-weight: 600;
-
         }
-   
     }
-    
-    &__active
-    {
-        background-color:  #E5F5FC;
+    &__active {
+        background-color: #E5F5FC;
         height: auto;
     }
 }
