--- a/FrontEnd/sass/abstracts/_variables.scss
+++ b/FrontEnd/sass/abstracts/_variables.scss
@@ -1,10 +1,11 @@
 // text variables
-$primary-text-color : rgba(0, 0, 0, 0.8); 
+$primary-text-color: rgba(0, 0, 0, 0.8);
 $secondary-text-color: rgba(0, 0, 0, 0.5);
-$font-family:-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-$primary-font-color: #1A1A1A;
+$font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
+  "Helvetica Neue", Arial, sans-serif;
+$primary-font-color: #1a1a1a;
 
-$secondary-font-color:#C8C8C8;
+$secondary-font-color: #c8c8c8;
 $third-font-color: #767676;
-$primary-section-bgcolor:#FFFFFF;
-$secondary-bg-color:#F3F6F8;
+$primary-section-bgcolor: #ffffff;
+$secondary-bg-color: #f3f6f8;
