--- a/FrontEnd/sass/base/_typography.scss
+++ b/FrontEnd/sass/base/_typography.scss
@@ -1,17 +1,12 @@
-.background
-{
-
-    &__section-heading
-    {
-        font-size: 2rem;
-        font-weight: 400;
-    }
+.background {
+  &__section-heading {
+    font-size: 2rem;
+    font-weight: 400;
+  }
 }
-.media-body
-{
-    p,a
-    {
-        font-size: 1.4rem;
-        font-weight: 400;
-    }
+.media-body {
+  p, a {
+    font-size: 1.4rem;
+    font-weight: 400;
+  }
 }
