--- a/FrontEnd/sass/base/_utilities.scss
+++ b/FrontEnd/sass/base/_utilities.scss
@@ -1,17 +1,13 @@
-.layout-margin
-{
-    margin: 5rem;
+.layout-margin {
+  margin: 5rem;
 }
-.linkedin-color
-{
-    background-color:#F5F5F5 ;
+.linkedin-color {
+  background-color: #f5f5f5;
 }
 
-.u-border
-{
-    border: 1px solid rgba($color: #000000, $alpha: .2) ;
+.u-border {
+  border: 1px solid rgba($color: #000000, $alpha: 0.2);
 }
-.u-border-bottom
-{
-    border-bottom:1px solid rgba($color: #000000, $alpha: .2)  ;
+.u-border-bottom {
+  border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
 }
