--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -14,11 +14,25 @@ html {
 body {
   overflow-x: hidden; }
 
+.background__section-heading {
+  font-size: 2rem;
+  font-weight: 400; }
+
+.media-body p, .media-body a {
+  font-size: 1.4rem;
+  font-weight: 400; }
+
 .layout-margin {
   margin: 5rem; }
 
 .linkedin-color {
-  background-color: #F5F5F5; }
+  background-color: #f5f5f5; }
+
+.u-border {
+  border: 1px solid rgba(0, 0, 0, 0.2); }
+
+.u-border-bottom {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
 
 .interests {
   background-color: white;
@@ -115,47 +129,43 @@ body {
     width: 100%;
     height: 1px;
     background-color: rgba(0, 0, 0, 0.2); }
-.item-intro {
+
+#ProfileSummary .profile-imgs {
   position: relative;
   height: 200px;
-  background-image: url("../assets/Capture.PNG");
+  background-image: url("../Assets/images/Cover.PNG");
   background-size: cover; }
+  #ProfileSummary .profile-imgs .profile-img {
+    top: 50%;
+    padding: 0 2em; }
+    #ProfileSummary .profile-imgs .profile-img img {
+      width: 150px;
+      height: 150px; }
 
-.info-ul {
+#ProfileSummary .edit-profile i {
+  color: #000; }
+
+#ProfileSummary .edit-profile .add-section {
+  color: #fff; }
+  #ProfileSummary .edit-profile .add-section i {
+    color: #fff; }
+
+#ProfileSummary .info {
   display: flex;
   list-style: none; }
 
-.img-profile {
-  top: 50%;
-  padding: 0 2em; }
-  .img-profile .profile-image {
-    width: 150px;
-    height: 150px; }
-
-.info-link {
-  color: black; }
-
-.sm-img {
+#ProfileSummary .sm-img {
   width: 32px;
   height: 32px; }
 
-.btn-more {
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.6); }
-  .btn-more :hover {
-    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.9); }
-.background__section-heading {
-  font-size: 2rem;
-  font-weight: 400; }
+#ProfileSummary .user-info h2 {
+  font-size: 2.5rem; }
 
-.media-body p, .media-body a {
-  font-size: 1.4rem;
-  font-weight: 400; }
+#ProfileSummary .user-info h4 {
+  font-size: 2rem; }
 
-.u-border {
-  border: 1px solid rgba(0, 0, 0, 0.2); }
-
-.u-border-bottom {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
+#ProfileSummary a {
+  font-size: 1.5rem; }
 
 .profile-icon {
   color: #0073b1;
@@ -173,15 +183,6 @@ body {
   width: 45px;
   height: 45px;
   margin: auto; }
-.tools {
-  background-color: #F3F6F8;
-  margin: 0;
-  width: 100%;
-  padding-bottom: 3rem;
-  display: none;
-  transition: all ease-in-out 0.2ms; }
-  .tools--active {
-    display: block; }
 
 .btn {
   text-decoration: none;
@@ -213,7 +214,7 @@ body {
   .btn--add {
     color: #7B7B7B; }
     .btn--add:hover {
-      background-color: #C8C8C8 !important;
+      background-color: #c8c8c8 !important;
       color: #1A1A1A; }
   .btn--active {
     display: inline-block; }
@@ -264,7 +265,7 @@ body {
 
 .accomplishment {
   padding: 1rem;
-  border-bottom: 1px solid #C8C8C8; }
+  border-bottom: 1px solid #c8c8c8; }
   .accomplishment__type {
     font-size: 1.5rem;
     color: #2D7EAA !important;
@@ -286,7 +287,7 @@ body {
 .section {
   margin: 4rem 20rem 4rem 12rem;
   width: 60%;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 0.2rem;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.2); }
   .section .btn--inline {
@@ -299,7 +300,7 @@ body {
   .section h3 {
     line-height: 1.4;
     font-weight: 400;
-    color: #1A1A1A;
+    color: #1a1a1a;
     padding-left: 1.2rem; }
   .section h2 {
     font-size: 2rem; }
@@ -321,6 +322,22 @@ body {
     font-size: 2rem !important;
     color: #767676;
     padding: 0.5rem; }
+
+.tool {
+  padding: 2rem 0 0 2.2rem;
+  letter-spacing: 0.7px;
+  line-height: 1.5;
+  font-weight: 600; }
+
+.tools {
+  background-color: #f3f6f8;
+  margin: 0;
+  width: 100%;
+  padding-bottom: 3rem;
+  display: none;
+  transition: all ease-in-out 0.2ms; }
+  .tools--active {
+    display: block; }
 
 .tooltip-inner {
   background-color: white !important;
@@ -346,9 +363,3 @@ body {
 
 .modal-body {
   padding: 2rem; }
-
-.tool {
-  padding: 2rem 0 0 2.2rem;
-  letter-spacing: 0.7px;
-  line-height: 1.5;
-  font-weight: 600; }
