--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -29,10 +29,31 @@ body {
   background-color: #f5f5f5; }
 
 .u-border {
-  border: 1px solid rgba(0, 0, 0, 0.2); }
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 6px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0.2rem; }
 
 .u-border-bottom {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
+
+.dashboard {
+  display: flex;
+  background-color: #f3f6f8;
+  padding: 3rem 2rem;
+  flex-direction: column;
+  box-shadow: 0px 2px 6px 0 rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2); }
+  .dashboard__title {
+    font-size: 2rem;
+    margin-bottom: 1.5rem; }
+  .dashboard__subtitle {
+    font-size: 1.6rem;
+    margin-bottom: 2.5rem; }
+  .dashboard__count {
+    color: #0073b1;
+    font-size: 3.2rem; }
+  .dashboard__description {
+    font-size: 1.6rem; }
 
 .interests {
   background-color: white;
@@ -96,25 +117,6 @@ body {
     font-size: 3rem;
     margin-right: .5rem; }
 
-.dashboard {
-  display: flex;
-  background-color: #F3F6F8;
-  padding: 3rem 2rem;
-  flex-direction: column;
-  box-shadow: 0px 2px 6px 0 rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(0, 0, 0, 0.2); }
-  .dashboard__title {
-    font-size: 2rem;
-    margin-bottom: 1.5rem; }
-  .dashboard__subtitle {
-    font-size: 1.6rem;
-    margin-bottom: 2.5rem; }
-  .dashboard__count {
-    color: #0073b1;
-    font-size: 3.2rem; }
-  .dashboard__description {
-    font-size: 1.6rem; }
-
 .interests-modal__content {
   padding: 1rem 0rem; }
 
@@ -167,6 +169,14 @@ body {
 #ProfileSummary a {
   font-size: 1.5rem; }
 
+.background__hide-icon:hover .profile-icon {
+  display: inline-block; }
+
+.background__img {
+  width: 45px;
+  height: 45px;
+  margin: auto; }
+
 .profile-icon {
   color: #0073b1;
   font-size: 1.5rem;
@@ -176,13 +186,82 @@ body {
   .profile-icon--hide {
     display: none; }
 
-.background__hide-icon:hover .profile-icon {
-  display: inline-block; }
+.section {
+  background-color: #ffffff; }
+  .section .btn--inline {
+    margin-top: 1.5rem; }
+  .section .btn--inline, .section h2 {
+    display: inline-block !important;
+    margin-top: 2.5rem; }
+  .section h2, .section h3 {
+    line-height: 1.4;
+    font-weight: 400;
+    color: #1a1a1a;
+    padding-left: 1.2rem; }
+  .section h2 {
+    font-size: 2rem; }
+  .section h3 {
+    border-bottom: 1px solid #cccccc;
+    border-top: 1px solid #cccccc;
+    font-size: 1.6rem;
+    padding-bottom: 1rem;
+    padding-top: 2.7rem;
+    padding-left: 2.4rem;
+    color: #767676; }
 
-.background__img {
-  width: 45px;
-  height: 45px;
-  margin: auto; }
+.skill {
+  padding: 2rem 0 1rem 1.2rem;
+  border-bottom: 1px solid #cccccc;
+  letter-spacing: 0.7px;
+  line-height: 1.5; }
+  .skill__description {
+    font-size: 1.4rem;
+    font-weight: 400; }
+  .skill:last-child {
+    border-bottom: none; }
+  .skill__title {
+    padding-bottom: 1rem; }
+  .skill__name, .skill__no-of-endorsments {
+    display: inline-block; }
+  .skill__name, .skill__endorsed-person {
+    font-weight: 600; }
+  .skill__no-of-endorsments {
+    color: #767676; }
+  .skill__endorsment-description {
+    font-weight: 400; }
+  .skill__endorsed-person, .skill__endorsment-description {
+    display: inline-block; }
+
+.skill-edit {
+  padding: 1rem !important; }
+  .skill-edit__skill {
+    font-weight: 500 !important;
+    font-size: 1.5rem !important; }
+  .skill-edit__icon {
+    font-size: 2rem !important;
+    color: #767676;
+    padding: 0.5rem; }
+
+.accomplishment {
+  padding: 1rem;
+  border-bottom: 1px solid #c8c8c8; }
+  .accomplishment__type {
+    font-size: 1.5rem;
+    color: #2D7EAA !important;
+    font-weight: 550; }
+  .accomplishment__description {
+    font-size: 1.4rem;
+    font-weight: 400; }
+  .accomplishment__section {
+    display: inline-block !important;
+    padding: 1rem; }
+  .accomplishment__section1 p {
+    font-size: 4rem;
+    color: #2D7EAA;
+    font-weight: 600; }
+  .accomplishment__active {
+    background-color: #E5F5FC;
+    height: auto; }
 
 .btn {
   text-decoration: none;
@@ -219,29 +298,6 @@ body {
   .btn--active {
     display: inline-block; }
 
-.skill {
-  padding: 2rem 0 1rem 1.2rem;
-  border-bottom: 1px solid #cccccc;
-  letter-spacing: 0.7px;
-  line-height: 1.5; }
-  .skill__description {
-    font-size: 1.4rem;
-    font-weight: 400; }
-  .skill:last-child {
-    border-bottom: none; }
-  .skill__title {
-    padding-bottom: 1rem; }
-  .skill__name, .skill__no-of-endorsments {
-    display: inline-block; }
-  .skill__name, .skill__endorsed-person {
-    font-weight: 600; }
-  .skill__no-of-endorsments {
-    color: #767676; }
-  .skill__endorsment-description {
-    font-weight: 400; }
-  .skill__endorsed-person, .skill__endorsment-description {
-    display: inline-block; }
-
 .nav-link {
   margin-top: 1.5rem;
   font-size: 1.4rem !important;
@@ -262,66 +318,6 @@ body {
 .media__body {
   display: flex !important;
   font-size: 1.4rem !important; }
-
-.accomplishment {
-  padding: 1rem;
-  border-bottom: 1px solid #c8c8c8; }
-  .accomplishment__type {
-    font-size: 1.5rem;
-    color: #2D7EAA !important;
-    font-weight: 550; }
-  .accomplishment__description {
-    font-size: 1.4rem;
-    font-weight: 400; }
-  .accomplishment__section {
-    display: inline-block !important;
-    padding: 1rem; }
-  .accomplishment__section1 p {
-    font-size: 4rem;
-    color: #2D7EAA;
-    font-weight: 600; }
-  .accomplishment__active {
-    background-color: #E5F5FC;
-    height: auto; }
-
-.section {
-  margin: 4rem 20rem 4rem 12rem;
-  width: 60%;
-  background-color: #ffffff;
-  border-radius: 0.2rem;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.2); }
-  .section .btn--inline {
-    margin-top: 1.5rem; }
-  .section .btn--inline,
-  .section h2 {
-    display: inline-block !important;
-    margin-top: 2.5rem; }
-  .section h2,
-  .section h3 {
-    line-height: 1.4;
-    font-weight: 400;
-    color: #1a1a1a;
-    padding-left: 1.2rem; }
-  .section h2 {
-    font-size: 2rem; }
-  .section h3 {
-    border-bottom: 1px solid #cccccc;
-    border-top: 1px solid #cccccc;
-    font-size: 1.6rem;
-    padding-bottom: 1rem;
-    padding-top: 2.7rem;
-    padding-left: 2.4rem;
-    color: #767676; }
-
-.skill-edit {
-  padding: 1rem !important; }
-  .skill-edit__skill {
-    font-weight: 500 !important;
-    font-size: 1.5rem !important; }
-  .skill-edit__icon {
-    font-size: 2rem !important;
-    color: #767676;
-    padding: 0.5rem; }
 
 .tool {
   padding: 2rem 0 0 2.2rem;
