--- a/FrontEnd/sass/base/_utilities.scss
+++ b/FrontEnd/sass/base/_utilities.scss
@@ -7,6 +7,8 @@
 
 .u-border {
   border: 1px solid rgba($color: #000000, $alpha: 0.2);
+  box-shadow: 0px 2px 6px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0.2rem;
 }
 .u-border-bottom {
   border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
