--- a/FrontEnd/sass/main.scss
+++ b/FrontEnd/sass/main.scss
@@ -9,22 +9,25 @@
 @import 'base/utilities';
 
 // Ibrahim
-@import 'components/interests.scss';
-@import 'components/dashboard.scss';
-@import 'components/interests-modal.scss';
+@import 'components/Ibrahim/dashboard';
+@import 'components/Ibrahim/interests';
+@import 'components/Ibrahim/interests-modal';
 
 // Nora
 @import 'components/Nora/profile-summary';
 
-@import 'components/profile-icon';
-@import 'components/background';
-@import 'components/btn-show.scss';
-@import 'components/skill.scss';
-@import 'components/nav-tab.scss';
-@import 'components/accomplishment.scss';
-@import 'components/section.scss';
-@import 'components/skill-edit.scss';
-@import 'components/tool';
+// Aya
+@import 'components/Aya/background';
+@import 'components/Aya/profile-icon';
+
+// Wafaa
+@import 'components/Wafaa/section';
+@import 'components/Wafaa/skill';
+@import 'components/Wafaa/skill-edit';
+@import 'components/Wafaa/accomplishment';
+@import 'components/Wafaa/btn-show';
+@import 'components/Wafaa/nav-tab';
+@import 'components/Wafaa/tool';
 
 @import 'layout/sections.scss';
 @import 'pages/profile.scss';
