--- a/FrontEnd/sass/base/_utilities.scss
+++ b/FrontEnd/sass/base/_utilities.scss
@@ -13,3 +13,9 @@
 .u-border-bottom {
   border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
 }
+
+label.required::after{
+  content: "*";
+  color: #0073b1;
+  margin-left: 2px;
+}
