--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/Views/Shared/_LoginPartial.cshtml
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/Views/Shared/_LoginPartial.cshtml
@@ -15,8 +15,8 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+    <ul class="nav navbar-nav navbar-right mr-2">
+        <li class="nav-item mr-3">@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
