Updating NewsFeed JS

--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/Content/CSS/NewsFeed.css
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/Content/CSS/NewsFeed.css
@@ -860,3 +860,7 @@ input[type="file"] {
   color: rgba(0, 0, 0, 0.6); }
 
 /*# sourceMappingURL=main.css.map */
+.uploaded-image
+{
+    max-height:60px;
+}
